--- a/src/components/Order/order.module.css
+++ b/src/components/Order/order.module.css
@@ -28,5 +28,62 @@ tr:hover {
     cursor: pointer;
 }
 
+.expandedRows {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.expandedRow {
+  background: #f5f5f5;
+}
+
+.container{
+    display: flex;
+    flex-direction: column;
+}
+
+.comments{
+    width: 700px;
+    background: white;
+    display: flex;
+    flex-direction: column;
+    border-radius: 20px;
+    padding: 10px;
+    margin: 10px;
+    cursor: pointer;
+}
+
+.comment {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 5px 0;
+}
+
+.commentText {
+    font-size: 15px;
+}
+
+.commentDetails {
+    font-size: 15px;
+}
+
+.horizontalLine {
+    width: 100%;
+    height: 1px;
+    background-color: #ccc;
+    margin: 5px 0;
+}
+
+.commentForm{
+    width: 700px;
+    background: white;
+    border-radius: 20px;
+    padding: 10px;
+    margin: 10px;
+}
+
+
 
 
