--- a/src/components/EditModal/editModal.module.css
+++ b/src/components/EditModal/editModal.module.css
@@ -1,5 +1,3 @@
-
-
 .modal {
     position: fixed;
     top: 0;
@@ -17,10 +15,11 @@
     background: #fff;
     border: 1px solid #ccc;
     padding: 20px;
-    width: 400px;
+    width: 850px;
+    height:550px;
     border-radius: 4px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    overflow: hidden;
+    overflow: auto;
 }
 
 .inputGroup {
@@ -31,7 +30,7 @@
 
 .inputRow {
     flex: 0 0 calc(50% - 10px);
-    margin-bottom: 10px;
+    margin-bottom: 15px;
 }
 
 .label {
@@ -42,15 +41,18 @@
 
 .input {
     width: 100%;
+    height: 50px;
     padding: 5px;
+    background: #ededed;
     border: 1px solid #ccc;
-    border-radius: 4px;
+    border-radius: 10px;
     font-size: 14px;
 }
 
 .scrollableContainer {
-    max-height: 250px;
+    max-height: 100vh;;
     overflow-y: auto;
+
 }
 
 .buttonRow {
@@ -60,7 +62,7 @@
 }
 
 .submitButton {
-    background-color: #5fc664;
+    background-color: #439f47;
     color: #fff;
     padding: 5px 10px;
     border: none;
@@ -68,9 +70,68 @@
 }
 
 .closeButton {
-    background-color: #5fc664;
+    background-color: #439f47;
     color: #fff;
     padding: 5px 10px;
     border: none;
     cursor: pointer;
 }
+
+.modalContent::-webkit-scrollbar {
+    width: 10px;
+}
+
+.modalContent::-webkit-scrollbar-track {
+    background: #76b752;
+}
+
+
+.modalContent::-webkit-scrollbar-thumb {
+    background: #439f47;
+    border-radius: 15px;
+}
+
+.group_buttons {
+    flex: 0 0 100%;
+}
+
+.add_button,
+.select_button {
+    background-color: #439f47;
+    color: #fff;
+    height:20px;
+    width: 50%;
+    padding: 5px 10px;
+    border: none;
+    cursor: pointer;
+    text-align: center;
+    line-height: 0;
+}
+
+.add_group_button{
+    background-color: #439f47;
+    height:20px;
+    width: 100%;
+    color: #fff;
+    padding: 5px 10px;
+    border: none;
+    cursor: pointer;
+    text-align: center;
+    line-height: 0;
+}
+button:hover{
+    background-color: #105913;
+}
+
+
+.custom_select {
+    width: 100%;
+    height: 50px;
+    padding: 5px;
+    background: #ededed;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    font-size: 14px;
+}
+
+
