--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -33,3 +33,19 @@
 .logout:hover {
     background-color: #a0ef44;
 }
+
+.faFilter{
+    background-color: #367c39;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    cursor: pointer;
+    border-radius: 5px;
+    margin: 0 10px ;
+}
+
+.faFilter:hover{
+    cursor: pointer;
+    background-color: #a0ef44;
+
+}
