--- a/src/components/Order/order.module.css
+++ b/src/components/Order/order.module.css
@@ -2,8 +2,12 @@
     box-sizing: border-box;
 }
 
+.tableContainer{
+    max-width: 1000px;
+}
+
 table {
-    width: 100%;
+    width: 1000px;
     border-collapse: collapse;
     margin-bottom: 20px;
 }
