--- a/src/components/EditModal/editModal.module.css
+++ b/src/components/EditModal/editModal.module.css
@@ -1,3 +1,7 @@
+*{
+    box-sizing: border-box;
+}
+
 .modal {
     position: fixed;
     top: 0;
@@ -26,23 +30,23 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    margin-bottom: 10px;
 }
 
 .inputRow {
     flex: 0 0 calc(50% - 10px);
-    margin-bottom: 15px;
 }
 
 .label {
     font-weight: bold;
     display: block;
-    margin-bottom: 5px;
 }
 
 .input {
     width: 100%;
     height: 50px;
     padding: 5px;
+    margin-bottom: 10px;
     background: #ededed;
     border: 1px solid #ccc;
     border-radius: 10px;
@@ -54,7 +58,7 @@
 }
 
 .buttonRow {
-    margin-top: 20px;
+    margin-top: 60px;
     display: flex;
     justify-content: space-between;
 }
@@ -139,4 +143,8 @@ button:hover{
 
 .select__menu-list {
     padding-right: 0;
+}
+.error {
+    color: red;
+    font-size: 0.8em;
 }
