--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -34,6 +34,10 @@
 .logout:hover {
     background-color: #a0ef44;
 }
+.logo{
+    cursor: pointer;
+}
+
 
 .faFilter{
     background-color: #367c39;
@@ -44,8 +48,21 @@
     border-radius: 5px;
     margin: 0 10px ;
 }
+.adminPanel{
+    background-color: #367c39;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    cursor: pointer;
+    border-radius: 5px;
+    margin: 0 10px ;
+}
 
 .faFilter:hover{
+    cursor: pointer;
+    background-color: #a0ef44;
+}
+.adminPanel:hover{
     cursor: pointer;
     background-color: #a0ef44;
 
