--- a/src/components/ActivateFormModal/activateModal.module.css
+++ b/src/components/ActivateFormModal/activateModal.module.css
@@ -4,14 +4,14 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgb(95, 197, 100);
     display: flex;
     justify-content: center;
     align-items: center;
     z-index: 1000;
 }
 
-.managerForm {
+.activateForm {
     width: 250px;
     padding: 20px;
     border: 1px solid #ccc;
@@ -36,7 +36,6 @@
     border: 1px solid #ccc;
     border-radius: 10px;
     background-color: #ededed;
-
 }
 
 .buttonContainer {
