--- a/src/components/Manager/manager.module.css
+++ b/src/components/Manager/manager.module.css
@@ -5,7 +5,7 @@
 
 .container {
     border: 1px solid #ccc;
-    min-width: 1100px;
+    min-width: 900px;
     border-radius: 10px;
     padding: 20px;
     margin-bottom: 20px;
@@ -15,7 +15,7 @@
 
 .manager{
     display: flex;
-    min-width: 1000px;
+    min-width: 850px;
     align-items: flex-start;
     border: 2px solid green;
     border-radius: 10px;
@@ -28,11 +28,13 @@ padding-left: 20px ;
 }
 
 .managerInfo > div {
+    width: 260px;
     color: #333;
 }
 
 .managerStatistic {
-    padding: 0 100px;
+width: 150px;
+    padding: 0 10px;
 }
 
 .managerButtons {
@@ -45,11 +47,14 @@ padding-left: 20px ;
     padding: 8px 16px;
     border: none;
     border-radius: 4px;
+    height: 45px;
     margin: 5px;
     cursor: pointer;
     background-color: #439f47;
 }
-
+.managerButtons button:hover {
+    background-color: #367c39;
+}
 
 .statistic_statuses{
 }
